<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_screen2">Screen2</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_checklist">Checklist</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_info_screen">InfoScreen</string>
    <string name="Next">Next</string>
    <string name="title_activity_play_option">PlayOption</string>

    <color name="black">#000</color>

    <string name="Button">Player1</string>
    <string name="Button2">Player2</string>
    <string name="ENTER_NAME">ENTER PLAYER2 NAME</string>
    <string name="description">TIC TAC TOE is a game in which 2 players alternately put X or O in square spaces in a grid. Target is to get the row of 3Xs or 3Os</string>
    <string name="abouttic">About Tic Tac Toe:</string>
    <string name="developedby">Developed By:</string>
    <string name="harsh"> Harsh Joshi</string>
    <string name="sanvir">Sanvir Bains</string>
    <string name="himangi">Himangi Topiwala</string>
    <string name="Scores">Scores</string>
    <string name="info">Info</string>
    <string name="welcome">Welcome!</string>
    <string name="exit">Exit</string>
    <string name="gamescreen">Game</string>
    <string name="title_activity_game">Game</string>
    <string name="first_human">You go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s turn.</string>
    <string name="result_tie">It\'s a tie!</string>
    <string name="result_human_wins">You Won!</string>
    <string name="result_android_wins">Android Won!</string>
    <string name="result_p1_wins">Player1 Won!</string>
    <string name="result_p2_wins">Player2 Won!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="human">Human:</string>
    <string name="ties">Ties:  </string>
    <string name="android">Android:  </string>
    <string name="play">Play</string>
    <string name="title_activity_play_game">PlayGame</string>
    <string name="new_game">Play Again</string>
    <string name="exit_game">Exit Game</string>
    <string name="title_activity_my_bluetooth">MyBluetooth</string>
    <string name="turn_player_one">Player1 Turn</string>
    <string name="turn_player_two">Player Two\'s Turn</string>
    <string name="title_activity_two_player">TwoPlayerActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_playerr_two">PlayerrTwo</string>
    <string name="bright">Brightness</string>
    <string name="music">Music</string>
    <string name="but">Sms Play</string>
    <string name="title_activity_selection">Selection</string>
    <string name="play1">Player1(X)</string>
    <string name="play2">Player2(O)</string>
    <string name="playerChoice">Choose Your Player:</string>
    <string name="ok">OK</string>
    <string name="title_activity_sms_two_play">SmsTwoPlayActivity</string>
    <string name="back">Back</string>
    <string name="highScores">HIGH SCORES</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="mode_binary">Binary</string>
    <string name="mode_hexa">Hexadecimal</string>
    <string name="mode_decimal">Decimal</string>

    <!-- In game -->
    <string name="game_score_title">Score: </string>
    <string name="game_score_sample">0</string>
    <string name="game_best_title">Best: </string>

    <!-- Game start -->
    <string name="gamestart_start_text">TAP TO PLAY</string>

    <!-- Game end -->
    <string name="gameover_gameovertext">Gameover</string>
    <string name="gameover_best_title">Best: </string>
    <string name="gameover_best_sample">200</string>
    <string name="gameover_score_sample">20</string>
    

</resources>
